syntax = "proto3";

package com.road.yishi.proto.market;

message MarketItemInfoMsg {
  int32 templateId = 1;
  string total = 2;
  int32 point = 3;
  string purchaseTotal = 4;
}
